Save run configuration
Saves run configurations which export javafx modules to unnamed module

This includes a run configuration for launching in Intellij, as well as for the gradlew run command.